--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,14 +16,17 @@ build:
 
 requirements:
   host:
-    - python >=3.8
+    - python >=3.9
     - pip
   run:
-    - python >=3.8
+    - python >=3.9
+    # FIXME
+    - pydantic <2.0  # See: https://github.com/intake/intake-esm/issues/617
+    # Main package
     - cartopy
     - cftime
     - cf_xarray >=0.7.6
-    - clisops >=0.9.5
+    - clisops >=0.10.0
     - dask-core
     - flox
     - fsspec
@@ -34,16 +37,19 @@ requirements:
     - matplotlib-base
     - netcdf4
     - numpy
-    - pandas !=1.5.3
-    - pyarrow  # Used when opening catalogs.
+    - pandas >=2.0
+    - parse
     - pygeos
     - pyyaml
     - rechunker
     - shapely
     - xarray <2023.3.0
-    - xclim >=0.37
+    - xclim >=0.43
     - xesmf >=0.7
     - zarr
+    # Opt
+    - nc-time-axis >=1.3.1
+    - pyarrow >=1.0.0  # Used when opening catalogs.
 
 test:
   imports:
