--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -32,7 +32,7 @@ requirements:
     - fsspec
     - geopandas
     - h5netcdf
-    - intake
+    - h5py
     - intake-esm >=2022.9.18
     - matplotlib-base
     - netcdf4
@@ -43,13 +43,15 @@ requirements:
     - pyyaml
     - rechunker
     - shapely
+    - sparse
+    - toolz
     - xarray
     - xclim >=0.43
     - xesmf >=0.7
     - zarr
     # Opt
     - nc-time-axis >=1.3.1
-    - pyarrow >=1.0.0  # Used when opening catalogs.
+    - pyarrow >=1.0.0  # Used when opening catalogs
 
 test:
   imports:
