--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,29 +21,32 @@ requirements:
   run:
     - python >=3.9
     # Main package
+    - babel
     - cartopy
     - cftime
     - cf_xarray >=0.7.6
     - clisops >=0.10.0
     - dask-core
     - flox
-    - fsspec
+    - fsspec <2023.10.0
     - geopandas
     - h5netcdf
     - h5py
     - intake-esm >=2023.07.07
     - matplotlib-base
     - netCDF4
+    - numcodecs
     - numpy
-    - pandas >=2
+    - pandas >=2.0
     - parse
     - pyyaml
     - rechunker
-    - shapely >=2
-    - sparse
+    - scipy
+    - shapely >=2.0
+    - sparse <=0.14  # 0.15 breaks xe.SpatialAverager (https://github.com/Ouranosinc/xscen/actions/runs/7463533566/job/20308477398)
     - toolz
-    - xarray
-    - xclim >=0.43
+    - xarray <2023.11.0  # FIXME: Remove when pandas 2.2 is released and xclim is fixed.
+    - xclim >=0.46
     - xesmf >=0.7
     - zarr
     # Opt
