Update host requirements

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,7 +17,11 @@ build:
 requirements:
   host:
     - python >=3.9
+    - babel
     - pip
+    - setuptools
+    - setuptools_scm
+    - wheel
   run:
     - python >=3.9
     # Main package
