--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,17 +16,16 @@ build:
 
 requirements:
   host:
-    - python >=3.9
+    - python >=3.10
     - babel
     - pip
-    - setuptools
-    - setuptools_scm
+    - setuptools >=65.0.0
+    - setuptools_scm >=8.0.0
     - wheel
   run:
-    - python >=3.9
+    - python >=3.10
     # Main package
-    - babel
-    - cartopy
+    - cartopy >=0.23.0
     - cftime
     - cf_xarray >=0.7.6
     - clisops >=0.10.0
@@ -40,19 +39,19 @@ requirements:
     - matplotlib-base
     - netCDF4
     - numcodecs
-    - numpy
+    - numpy >=1.24
     - pandas >=2.2
     - parse
     - pyyaml
     - rechunker
-    - scipy
+    - scipy >=1.10
     - shapely >=2.0
     - sparse
     - toolz
-    - xarray >=2023.11.0
-    - xclim >=0.48.2
+    - xarray >=2023.11.0, !=2024.6.0
+    - xclim >=0.52.2, <0.53
     - xesmf >=0.7
-    - zarr
+    - zarr >=2.13
     # Opt
     - nc-time-axis >=1.3.1
     - pyarrow >=10.0.1  # Used when opening catalogs
