--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -60,11 +60,12 @@ test:
   imports:
     - xscen
   source_files:
+    - CHANGELOG.rst
     - docs
     - tests
   commands:
     - pip check
-    - pytest tests -m "not requires_netcdf"
+    - pytest tests -m "not requires_netcdf" -k "not test_common_open"
   requires:
     - pip
     - pytest
