--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,14 +16,14 @@ build:
 
 requirements:
   host:
-    - python >=3.10
+    - python >=3.10,<3.13
     - babel
-    - pip
+    - pip >=24.2.0
     - setuptools >=65.0.0
     - setuptools_scm >=8.0.0
     - wheel
   run:
-    - python >=3.10
+    - python >=3.10,<3.13
     # Main package
     - cartopy >=0.23.0
     - cftime
@@ -49,7 +49,7 @@ requirements:
     - sparse
     - toolz
     - xarray >=2023.11.0, !=2024.6.0
-    - xclim >=0.52.2, <0.53
+    - xclim >=0.53.2, <0.54
     - xesmf >=0.7
     - zarr >=2.13
     # Opt
