--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -36,7 +36,7 @@ requirements:
     - h5netcdf
     - h5py
     - intake-esm >=2023.07.07
-    - matplotlib-base
+    - matplotlib-base >=3.6
     - netCDF4
     - numcodecs
     - numpy >=1.24
@@ -48,8 +48,8 @@ requirements:
     - shapely >=2.0
     - sparse
     - toolz
-    - xarray >=2023.11.0, !=2024.6.0
-    - xclim >=0.53.2, <0.54
+    - xarray >=2023.11.0,!=2024.6.0
+    - xclim >=0.53.2,<0.54
     - xesmf >=0.7
     - zarr >=2.13
     # Opt
