--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -68,7 +68,7 @@ test:
     - pip check
     - pytest tests -m "not requires_netcdf" -k "not test_common_open"
   requires:
-    - python >={{ python_min }},<3.13
+    - python ={{ python_min }}
     - pip
     - pytest
     - xdoctest
