--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,13 +23,13 @@ requirements:
     - setuptools_scm >=8.0.0
     - wheel
   run:
-    - python >={{ python_min }},<3.13
+    - python >={{ python_min }},<3.14
     # Main package
     - cartopy >=0.23.0
     - cftime
     - cf_xarray >=0.7.6
-    - clisops >=0.10.0
-    - dask-core >=2024.8.1,<2024.11
+    - clisops >=0.15.0
+    - dask-core >=2024.8.1,<2024.12
     - flox !=0.9.14
     - fsspec
     - geopandas
@@ -49,10 +49,11 @@ requirements:
     - shapely >=2.0
     - sparse
     - toolz
-    - xarray >=2023.11.0,!=2024.6.0,<2024.10.0
-    - xclim >=0.53.2,<0.55
-    - xesmf >=0.7
-    - zarr >=2.13,<3.0
+    - xarray >=2023.11.0, !=2024.6.0
+    - xclim >=0.55.1, <0.56
+    - xesmf >=0.7, !=0.8.8
+    - zarr >=2.13, <3
+    - xsdba >=0.3.0
     # Opt
     - nc-time-axis >=1.3.1
     - pyarrow >=10.0.1  # Used when opening catalogs
