--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,19 +17,17 @@ build:
 
 requirements:
   host:
-    - python {{ python_min }}.*
-    - pip >=24.2.0
-    - setuptools >=65.0.0
-    - setuptools_scm >=8.0.0
-    - wheel
+    - python {{ python_min }}
+    - flit-core >=3.10.1,<4.0
+    - pip >=25.0
   run:
-    - python >={{ python_min }},<3.14
+    - python >={{ python_min }}
     # Main package
     - cartopy >=0.23.0
     - cftime
     - cf_xarray >=0.7.6
     - clisops >=0.15.0
-    - dask-core >=2024.8.1,<2024.12
+    - dask-core >=2024.8.1,<2024.12 # FIXME: Remove upper pin when https://github.com/pangeo-data/rechunker/pull/156 is merged
     - flox !=0.9.14
     - fsspec
     - geopandas
@@ -37,12 +35,14 @@ requirements:
     - h5py
     - intake-esm >=2023.07.07
     - matplotlib-base >=3.6
+    - nc-time-axis >=1.3.1
     - netCDF4
     - numcodecs
     - numpy >=1.24
     - openpyxl
     - pandas >=2.2
     - parse
+    - pyarrow >=10.0.1  # Used when opening catalogs
     - pyyaml
     - rechunker
     - scipy >=1.10
@@ -51,12 +51,10 @@ requirements:
     - toolz
     - xarray >=2023.11.0,!=2024.6.0
     - xclim >=0.55.1,<0.56
-    - xesmf >=0.7,!=0.8.8
-    - zarr >=2.13,<3
     - xsdba >=0.3.0
-    # Opt
-    - nc-time-axis >=1.3.1
-    - pyarrow >=10.0.1  # Used when opening catalogs
+    - zarr >=2.13,<3
+  run_constrained:
+    - xesmf >=0.7,!=0.8.8
 
 test:
   imports:
@@ -68,7 +66,7 @@ test:
     - src/xscen
   commands:
     - pip check
-    - pytest tests -m "not requires_netcdf" -k "not test_common_open"
+    - pytest tests -m "not requires_netcdf"
   requires:
     - python {{ python_min }}
     - pip
