--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -26,34 +26,34 @@ requirements:
     - cartopy >=0.23.0
     - cftime
     - cf_xarray >=0.7.6
-    - clisops >=0.15.0
-    - dask-core >=2024.8.1,<2024.12 # FIXME: Remove upper pin when https://github.com/pangeo-data/rechunker/pull/156 is merged
-    - flox !=0.9.14
+    - clisops >=0.16.1
+    - dask-core >=2024.8.1
+    - flox
     - fsspec
-    - geopandas
+    - geopandas >=1.0
     - h5netcdf
     - h5py
-    - intake-esm >=2023.07.07
+    - intake-esm >=2025.2.3
     - matplotlib-base >=3.6
     - nc-time-axis >=1.3.1
     - netCDF4
-    - numcodecs
+    - numcodecs <0.16.0
     - numpy >=1.24
     - openpyxl
     - pandas >=2.2
     - parse
-    - pyarrow >=10.0.1  # Used when opening catalogs
+    - pyarrow >=15.0.0
     - pyyaml
-    - rechunker
-    - scipy >=1.10
+    - rechunker >=0.5.3
+    - scipy >=1.11.0
     - shapely >=2.0
     - sparse
     - toolz
-    - xarray >=2023.11.0,!=2024.6.0
-    - xclim >=0.55.1,<0.56
+    - xarray >=2023.11.0,!=2024.6.0,<=2025.3.0
+    - xclim >=0.56.0,<0.57.0
     - xesmf >=0.7,!=0.8.8
-    - xsdba >=0.3.0
-    - zarr >=2.13,<3
+    - xsdba >=0.4.0
+    - zarr >=2.13,<3.0
 
 
 test:
