--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -43,6 +43,7 @@ requirements:
     - pandas >=2.2
     - parse
     - pyarrow >=15.0.0
+    - pyproj
     - pyyaml
     - rechunker >=0.5.3
     - scipy >=1.11.0
