--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -50,7 +50,7 @@ requirements:
     - shapely >=2.0
     - sparse
     - toolz
-    - xarray >=2023.11.0,!=2024.6.0,<=2025.3.0
+    - xarray >=2023.11.0,!=2024.6.0
     - xclim >=0.56.0,<0.57.0
     - xesmf >=0.7,!=0.8.8
     - xsdba >=0.4.0
