--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -33,7 +33,7 @@ requirements:
     - geopandas >=1.0
     - h5netcdf
     - h5py
-    - intake-esm >=2025.2.3
+    - intake-esm ==2025.2.3
     - matplotlib-base >=3.6
     - nc-time-axis >=1.3.1
     - netCDF4
@@ -51,11 +51,10 @@ requirements:
     - sparse
     - toolz
     - xarray >=2023.11.0,!=2024.6.0
-    - xclim >=0.56.0,<0.58.0
+    - xclim >=0.56.0,<0.59.0
     - xesmf >=0.7,!=0.8.8
     - xsdba >=0.4.0
     - zarr >=2.13,<3.0
-
 
 test:
   imports:
