--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -31,8 +31,8 @@ requirements:
     - flox
     - fsspec
     - geopandas >=1.0
-    - h5netcdf
-    - h5py
+    - h5netcdf >=1.5.0
+    - h5py >=3.12.1
     - intake-esm ==2025.2.3
     - matplotlib-base >=3.6
     - nc-time-axis >=1.3.1
@@ -43,6 +43,7 @@ requirements:
     - pandas >=2.2
     - parse
     - pyarrow >=15.0.0
+    - pdantic <2.12.0
     - pyproj
     - pyyaml
     - rechunker >=0.5.3
