--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -43,7 +43,7 @@ requirements:
     - pandas >=2.2
     - parse
     - pyarrow >=15.0.0
-    - pdantic <2.12.0
+    - pydantic <2.12.0
     - pyproj
     - pyyaml
     - rechunker >=0.5.3
