--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,7 +18,7 @@ build:
 requirements:
   host:
     - python {{ python_min }}
-    - flit-core >=3.10.1,<4.0
+    - flit-core >=3.11.0,<4.0
     - pip >=25.0
   run:
     - python >={{ python_min }}
@@ -37,13 +37,13 @@ requirements:
     - matplotlib-base >=3.6
     - nc-time-axis >=1.3.1
     - netCDF4
-    - numcodecs <0.16.0
+    - numcodecs
     - numpy >=1.24
     - openpyxl
     - pandas >=2.2
     - parse
     - pyarrow >=15.0.0
-    - pydantic <2.12.0
+    - pydantic >=2.8.2
     - pyproj
     - pyyaml
     - rechunker >=0.5.3
@@ -52,7 +52,7 @@ requirements:
     - sparse
     - toolz
     - xarray >=2023.11.0,!=2024.6.0
-    - xclim >=0.56.0,<0.59.0
+    - xclim >=0.56.0,<0.61.0
     - xesmf >=0.7,!=0.8.8
     - xsdba >=0.4.0
     - zarr >=2.13,<3.0
