--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -56,6 +56,7 @@ requirements:
     - xesmf >=0.7,!=0.8.8
     - xsdba >=0.4.0
     - zarr >=2.13,<3.0
+    - fastprogress <1.1  # FIXME: Temporary fix for https://github.com/AnswerDotAI/fastprogress/issues/117 (fastprogress is a dep through intake-esm)
 
 test:
   imports:
